Fixed table style on smaller screens

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -69,6 +69,16 @@ a:hover {
   display: flex;
   justify-content: center;
 }
+@media screen and (max-width: 1100px) {
+  .center-container {
+    display: block;
+    margin: 0px;
+    padding: 0px;
+  }
+  .container td.mat-cell {
+    padding-right: 12px;
+  }
+}
 
 /* Errors */
 .material-icons.md-18 { font-size: 18px; }
